--- a/.htaccess
+++ b/.htaccess
@@ -4,9 +4,9 @@
   RewriteEngine On
   RewriteBase /
 
-  RewriteRule \.htaccess - [L,NC,R=404]
+  RewriteRule \.htaccess$ - [L,NC,R=404]
   RewriteRule ^\.git - [L,NC,R=404]
-  RewriteRule ^\backup.sh - [L,NC,R=404]
+  RewriteRule ^backup.sh$ - [L,NC,R=404]
 </IfModule>
 
 # Disable directory browsing
